[gd_scene load_steps=5 format=2]

[ext_resource path="res://Units/Hostile/Telegraph/Telegraph.png" type="Texture" id=1]
[ext_resource path="res://Units/Hostile/Telegraph/Telegraph.gd" type="Script" id=2]
[ext_resource path="res://Character/Abilities/FireSkull/flame.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="Telegraph" type="Node2D"]
modulate = Color( 0.796078, 0.262745, 0.262745, 0.396078 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.22772, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.32354 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Location" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0.94902, 0.517647, 1 )
position = Vector2( 0, 0.583984 )
emitting = false
amount = 100
lifetime = 0.8
one_shot = true
explosiveness = 0.4
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 35.0
gravity = Vector2( 0, -98 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
